force-app/main/default/objects/breg_Case_Staging__c/breg_Case_Staging__c.object-meta.xml
<CustomObject>
    <label>Case Staging</label>
    <nameField>
        <label>Case Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>