force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>breg_Document__c</referenceTo>
    <relationshipLabel>Case Staging</relationshipLabel>
    <relationshipName>Case_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>