force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Document_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>breg_Document_Creation_Date_Time__c</fullName>
    <label>Document Creation Date Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>