force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Error__c.field-meta.xml
<CustomField>
    <fullName>breg_Error__c</fullName>
    <label>Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>