force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>breg_Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>