force-app/main/default/objects/breg_Case_Staging__c/fields/breg_No_Changes__c.field-meta.xml
<CustomField>
    <fullName>breg_No_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Changes</label>
    <type>Checkbox</type>
</CustomField>