force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Processed__c.field-meta.xml
<CustomField>
    <fullName>breg_Processed__c</fullName>
    <label>Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>