force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Queue_Name__c</fullName>
    <label>Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annuals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>