force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>