force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>breg_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>