force-app/main/default/objects/breg_Case_Staging__c/fields/breg_Workitem_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_Workitem_Number__c</fullName>
    <label>Workitem Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>