force-app/main/default/objects/breg_Case_Staging__c/recordTypes/Heartbeat.recordType-meta.xml
<RecordType>
    <fullName>Heartbeat</fullName>
    <active>true</active>
    <label>Heartbeat</label>
</RecordType>